--- a/src/main/resources/global_az.properties
+++ b/src/main/resources/global_az.properties
@@ -1,2 +1,6 @@
-exposure = Ekspozisiyanın qurulma AZ
+exposure = Ekspozisiyanın qurulması AZ
 distanse = Səthə qədər məsafəni seçin AZ
+upper = Həssaslığın qululması AZ
+area = Minimal və maksimal ölçü AZ
+next = Növbəti
+back = Geri
