--- a/src/main/resources/global_ru.properties
+++ b/src/main/resources/global_ru.properties
@@ -1,2 +1,6 @@
 exposure = Настройка экспозиции RU
 distanse = Выберите расстояние до поверхности RU
+upper = Настройка чувствительности RU
+area = Минимальный и максимальный размер RU
+next = Далее 
+back = Назад
