--- a/src/main/resources/global_en.properties
+++ b/src/main/resources/global_en.properties
@@ -1,2 +1,6 @@
-exposure = Exposure Adjustment EN
+exposure = Exposure setting EN
 distanse = Select the distance to the surface EN
+upper = Sensitivity setting EN
+area = MIN and MAX area EN
+next = Next
+back = Back
